terraform/manifests/prime-server-ingress.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Create an ingress to access the prime-server over the internet.
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prime-server
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "prime-server"
spec:
  backend:
    serviceName: prime-server
    servicePort: 8080
